# bodhya

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md  USER_GUIDE.md  checklist.md  models.yaml
crates/agent-code/: Cargo.toml
crates/agent-code/src/: agentic_executor.rs  bdd.rs  impl_gen.rs  lib.rs  planner.rs  review.rs  tdd.rs  tools.rs  validate.rs
crates/agent-mail/: Cargo.toml
crates/agent-mail/src/: classify.rs  draft.rs  lib.rs  refine.rs
crates/api-server/: Cargo.toml  README.md  openapi.yaml
crates/api-server/src/: lib.rs  main.rs  middleware.rs  models.rs  routes.rs  state.rs  websocket.rs
crates/cli/: Cargo.toml
crates/cli/src/: agents_cmd.rs  config_templates.rs  history_cmd.rs  init_cmd.rs  lib.rs  main.rs  models_cmd.rs  run_cmd.rs  serve_cmd.rs  tools_cmd.rs  utils.rs
crates/cli/tests/: integration_test.rs
crates/controller/: Cargo.toml
crates/controller/src/: controller.rs  engagement.rs  lib.rs  orchestrator.rs  routing.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  errors.rs  lib.rs  model.rs  tool.rs
crates/model-registry/: Cargo.toml
crates/model-registry/src/: downloader.rs  lib.rs  local_mistral.rs  manager.rs  manifest.rs  registry.rs  remote_stub.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  models.rs  sqlite.rs
crates/tools-mcp/: Cargo.toml
crates/tools-mcp/src/: edit_tool.rs  fs_tool.rs  json_rpc.rs  lib.rs  mcp_client.rs  mcp_tool_wrapper.rs  search_tool.rs  shell_tool.rs  stdio_mcp_client.rs
documents/: IMPLEMENTATION_SUMMARY.md  TOOL_INTEGRATION_CHECKLIST.md  bodhya_brd.md  bodhya_claude_prompt.md  bodhya_code_design.md  bodhya_gherkin_features.md  bodhya_gherkin_test_cases.md  bodhya_gherkin_use_cases.md  bodhya_system_design.md  bodhya_tool_integration_plan.md  tool_extensibility_design.md
eval/: README.md
eval/code_agent/: Cargo.toml  README.md
eval/code_agent/src/: lib.rs  main.rs  runner.rs  scorer.rs  standard_cases.rs  test_case.rs
eval/mail_agent/: Cargo.toml  README.md
eval/mail_agent/src/: lib.rs  main.rs  runner.rs  scorer.rs  standard_cases.rs  test_case.rs
examples/: README.md
examples/code_tasks/: binary_tree.txt  csv_parser.txt  fibonacci.txt
examples/mail_tasks/: customer_followup.txt  team_intro.txt  vendor_inquiry.txt
prompts/code/: bdd.txt  code_refiner.txt  coder.txt  error_analyzer.txt  planner.txt  reviewer.txt  tdd.txt
prompts/mail/: draft.txt  refine.txt
scripts/: check_all.sh  install.ps1  install.sh
