[package]
name = "bodhya-api-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bodhya-server"
path = "src/main.rs"

[dependencies]
bodhya-core = { path = "../core" }
bodhya-controller = { path = "../controller" }
bodhya-model-registry = { path = "../model-registry" }
bodhya-agent-code = { path = "../agent-code" }
bodhya-agent-mail = { path = "../agent-mail" }
bodhya-storage = { path = "../storage" }

tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
