[package]
name = "bodhya-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
home.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall.workspace = true
tempfile.workspace = true
